# FCalClusterer

./: .travis.yml  BeamCalRecoConfig.cmake  CMakeLists.txt  README.md
.github/workflows/: coverity.yml  linux.yml
.travis-ci.d/: compile_and_test.sh  init_x86_64.sh
LumiCalReco/include/: ClusterClass.h  Distance2D.hh  Global.hh  LCCluster.hh  OutputManagerClass.h  ProjectionInfo.hh  SortingFunctions.hh  VirtualCluster.hh
LumiCalReco/src/: GlobalMethodsClass.cpp  LumiCalClusterer.cpp  LumiCalClusterer_buildClusters.cpp  LumiCalClusterer_buildClusters_auxiliary.cpp  LumiCalClusterer_clusterMerger.cpp  LumiCalClusterer_energyCorrections.cpp  LumiCalClusterer_getCalHits.cpp  OutputManagerClass.cpp  ProjectionInfo.cpp  SuperTrueClusterWeights.cpp  VirtualCluster.cpp
TestBecas/: GearBeamCal.xml  GearUS.xml  HEe_200GeV_forUS_00000_aBCS.root  bg_rms_US_1-10files_130210.root
Tests/: CMakeLists.txt  TestReconstruction.xml  beamcal.mac  lumical.mac
Tests/CLIC_o3_v14/: CLIC_o3_v14.xml
cmake/: clang-cpp-checks.cmake
doc/: CMakeLists.txt  Doxyfile  ReleaseNotes.md  release.notes
examples/: BeamCalReco-GaussianBG.xml  BeamCalReco-GaussianBG_DD.xml  BeamCalReco-ParametrisedBG.xml  BeamCalReco-PregeneratedBG.xml  GearCLIC_ILD_CDR_Final.xml  LumiCalClustererExample.xml  LumiClusterReco_DD.xml  ReadBeamCal.xml  ReadLumiAndBeamCal_DD.xml  clic_ild_cdr_pandora_settings.xml  clic_ild_cdr_steering.xml
source/: CMakeLists.txt
source/BeamCalReco/: CMakeLists.txt
source/BeamCalReco/include/: BCPCuts.hh  BCPadEnergies.hh  BCRecoObject.hh  BCRootUtilities.hh  BCUtilities.hh  BeamCal.hh  BeamCalBackground.hh  BeamCalBkg.hh  BeamCalBkgAverage.hh  BeamCalBkgEmpty.hh  BeamCalBkgGauss.hh  BeamCalBkgParam.hh  BeamCalBkgPregen.hh  BeamCalCluster.hh  BeamCalFitShower.hh  BeamCalGeo.hh  BeamCalGeoCached.hh  BeamCalGeoDD.hh  BeamCalGeoGear.hh  BeamCalPadGeometry.hh
source/BeamCalReco/src/: BCPCuts.cpp  BCPadEnergies.cpp  BCRootUtilities.cpp  BCUtilities.cpp  BeamCal.cpp  BeamCalBackground.cpp  BeamCalBkg.cpp  BeamCalBkgAverage.cpp  BeamCalBkgEmpty.cpp  BeamCalBkgFactory.cpp  BeamCalBkgGauss.cpp  BeamCalBkgParam.cpp  BeamCalBkgPregen.cpp  BeamCalCluster.cpp  BeamCalFitShower.cpp  BeamCalGeo.cpp  BeamCalGeoCached.cpp  BeamCalGeoDD.cpp  BeamCalGeoGear.cpp  BeamCalPadGeometry.cpp
source/LumiCalReco/: CMakeLists.txt
source/LumiCalReco/include/: ClusterClass.h  Global.hh  GlobalMethodsClass.h  LCCluster.hh  LumiCalClusterer.h  LumiCalHit.hh  MCInfo.h  MarlinLumiCalClusterer.h  MarlinLumiCalClusterer_auxiliary.h  OutputManagerClass.h  ProjectionInfo.hh  SortingFunctions.hh  SuperTrueClusterWeights.hh  VirtualCluster.hh
source/LumiCalReco/src/: ClusterClass.cpp  GlobalMethodsClass.cpp  LCCluster.cpp  LumiCalClusterer.cpp  LumiCalClusterer_auxiliary.cpp  LumiCalClusterer_buildClusters.cpp  LumiCalClusterer_buildClusters_auxiliary.cpp  LumiCalClusterer_clusterMerger.cpp  LumiCalClusterer_energyCorrections.cpp  LumiCalClusterer_fiducialVolumeCuts.cpp  LumiCalClusterer_getCalHits.cpp  MCInfo.cpp  MarlinLumiCalClusterer.cpp  OutputManagerClass.cpp  ProjectionInfo.cpp  SuperTrueClusterWeights.cpp  VirtualCluster.cpp
source/MarlinProcessors/: CMakeLists.txt
source/MarlinProcessors/include/: BeamCalClusterReco.hh  DrawBeamCalFromDD4hep.hh  ProcessorUtilities.hh  ReadBC_SepEvt.hh  ReadBC_tower.hh  ReadBeamCal.hh
source/MarlinProcessors/src/: BeamCalClusterReco.cpp  DrawBeamCalFromDD4hep.cpp  MarlinLumiCalClusterer.cc  ReadBC_SepEvt.cpp  ReadBC_tower.cpp  ReadBeamCal.cpp
source/ShowerTemplates/: CMakeLists.txt
source/ShowerTemplates/include/: showerTemplates.hh
source/ShowerTemplates/src/: showerTemplates.cpp
source/Tests/: CMakeLists.txt
source/Tests/include/: TestMain.hh  TestUtilities.hh
source/Tests/src/: TestBeamCalReco.cpp  TestLumi2Clu.cpp  TestLumiCalReco.cpp
source/Utilities/: CMakeLists.txt
source/Utilities/include/: BackgroundFitter.hh  RootUtils.hh  TestUtilities.hh
source/Utilities/src/: BCBackgroundPar.cpp  BackgroundFitter.cpp  Occupancies.cpp  RootUtils.cpp
source/include/: ProfileExtractor.hh
source/include/BeamCalReco/: BCPCuts.hh  BCPadEnergies.hh  BCUtilities.hh  BeamCal.hh  BeamCalCluster.hh  BeamCalGeo.hh  BeamCalGeoGear.hh
source/include/BeamCalRecoProcessors/: BeamCalClusterReco.hh  ReadBeamCal.hh
source/include/LumiCalReco/: ClusterClass.h  Global.hh  GlobalMethodsClass.h  LumiCalClusterer.h  MarlinLumiCalClusterer.h  MarlinLumiCalClusterer_auxiliary.h  OutputManagerClass.h  SortingClass.h  SortingFunctions.hh  VirtualCluster.hh
source/src/: CMakeLists.txt  DrawBeamCals.cpp  ReconstructBecas.cpp  TestBeamCalReco.cpp  TestLumi2Clu.cpp  TestLumiCalReco.cpp  longitudinals.cpp
source/src/BeamCalReco/: BCPCuts.cpp  BCPadEnergies.cpp  BCRecoObject.cpp  BCRootUtilities.cpp  BCUtilities.cpp  BeamCal.cpp  BeamCalCluster.cpp  BeamCalGeo.cpp  BeamCalGeoCached.cpp  BeamCalGeoDD.cpp  BeamCalGeoGear.cpp  CMakeLists.txt
source/src/BeamCalRecoProcessors/: BeamCalClusterReco.cpp  CMakeLists.txt  MarlinLumiCalClusterer.cc  ReadBeamCal.cpp
source/src/LumiCalReco/: CMakeLists.txt  ClusterClass.cpp  GlobalMethodsClass.cpp  LCCluster.cpp  LumiCalClusterer.cc  LumiCalClusterer.cpp  LumiCalClusterer_auxiliary.cpp  LumiCalClusterer_auxiliary.h  LumiCalClusterer_buildClusters.cpp  LumiCalClusterer_buildClusters.h  LumiCalClusterer_buildClusters_auxiliary.cpp  LumiCalClusterer_buildClusters_auxiliary.h  LumiCalClusterer_clusterMerger.cpp  LumiCalClusterer_clusterMerger.h  LumiCalClusterer_energyCorrections.cpp  LumiCalClusterer_energyCorrections.h  LumiCalClusterer_fiducialVolumeCuts.cpp  LumiCalClusterer_fiducialVolumeCuts.h  LumiCalClusterer_getCalHits.cpp  LumiCalClusterer_getCalHits.h  ProjectionInfo.cpp  SuperTrueClusterWeights.cpp  VirtualCluster.cpp
