IF(DD4hep_FOUND)

  INCLUDE_DIRECTORIES(./include)

  ADD_EXECUTABLE(TestBeamCalReco src/TestBeamCalReco.cpp)
  TARGET_LINK_LIBRARIES(TestBeamCalReco BeamCalReco LumiCalReco)
  TARGET_INCLUDE_DIRECTORIES(TestBeamCalReco SYSTEM BEFORE PRIVATE ${LCIO_INCLUDE_DIRS})

  ADD_EXECUTABLE(TestLumiCalReco src/TestLumiCalReco.cpp)
  TARGET_INCLUDE_DIRECTORIES(TestLumiCalReco SYSTEM BEFORE PRIVATE ${LCIO_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(TestLumiCalReco LumiCalReco BeamCalReco)

  ADD_EXECUTABLE(TestLumi2Clu src/TestLumi2Clu.cpp)
  TARGET_INCLUDE_DIRECTORIES(TestLumi2Clu SYSTEM BEFORE PRIVATE ${LCIO_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(TestLumi2Clu LumiCalReco BeamCalReco)

  INSTALL(TARGETS TestLumiCalReco TestBeamCalReco TestLumi2Clu
    RUNTIME DESTINATION bin)
ENDIF()
