SET( Utilities_SOURCES 
  src/RootUtils.cpp
  src/BCBackgroundPar.cpp
  src/BackgroundFitter.cpp
 )

INCLUDE_DIRECTORIES ( ./include )

ADD_LIBRARY( FCalUtils SHARED ${Utilities_SOURCES} )
TARGET_LINK_LIBRARIES( FCalUtils ${ROOT_LIBRARIES}  )

ADD_EXECUTABLE( BCBackgroundPar src/BCBackgroundPar.cpp src/BackgroundFitter.cpp )

TARGET_LINK_LIBRARIES( BCBackgroundPar ${ROOT_LIBRARIES}  )

IF( DD4hep_FOUND )
  ADD_EXECUTABLE(Occupancies src/Occupancies.cpp)
  TARGET_LINK_LIBRARIES(Occupancies BeamCalReco FCalUtils )
  TARGET_INCLUDE_DIRECTORIES(Occupancies PUBLIC ${CMAKE_SOURCE_DIR}/source/BeamCalReco/include )
  INSTALL(TARGETS Occupancies DESTINATION bin)

ENDIF()

IF ( CPPCHECK_FOUND )
  ADD_CPPCHECK( FCalUtils UNUSED_FUNCTIONS STYLE POSSIBLE_ERRORS FORCE FAIL_ON_WARNINGS)
  ADD_CPPCHECK( BCBackgroundPar UNUSED_FUNCTIONS STYLE POSSIBLE_ERRORS FORCE FAIL_ON_WARNINGS)
ENDIF()

INSTALL( TARGETS
  FCalUtils
  LIBRARY DESTINATION lib)

INSTALL( TARGETS
  BCBackgroundPar
  DESTINATION bin)
